--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <table cellspacing = "20">
         <tr>
-            <td><img src="images/Juan Profile Pic.png" alt="Juan´s profile pic"></td>
+            <td><img src="Juan Profile Pic.png" alt="Juan´s profile pic"></td>
             <td>  <h1>Juan Fran Sierra</h1>
                 <p><em>Lifelong <strong>learner</strong></em></p>
                 <p>Lorem ipsum dolor</p>
